--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
+    <script src="./node_modules/flowbite/dist/flowbite.min.js"></script>
     <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
