--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
     <div id="root"></div>
     <script src="./node_modules/flowbite/dist/flowbite.min.js"></script>
     <script type="module" src="/src/index.jsx"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
   </body>
 </html>
